infra/k8s/moderation-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - port: 5003
      targetPort: 5003
