infra/k8s/query-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  type: ClusterIP
  selector:
    app: query
  ports:
    - port: 5004
      targetPort: 5004
