infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: blog.local
      http:
        paths:
          # Backend APIs (täpsed path’id ees)
          - path: /posts/create
            pathType: Prefix
            backend:
              service:
                name: posts-srv
                port:
                  number: 5000

          - path: /posts/
            pathType: Prefix
            backend:
              service:
                name: comments-srv
                port:
                  number: 5001

          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 5004

          # React klient (kõik muu)
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
